# Embedded-Linux

./: .gitmodules  .vimrc  .zshrc  README.md
c_progs/dice/: .gitignore  CMakeLists.txt  Dice  README.md  basic.mk  compact.mk  dice.c  dice.h  input_parser.c  input_parser.h  main.c  makefile
c_progs/dice/.ccls-cache/@@home@jaakko@c_progs@dice/: @usr@include@alloca.h.blob  @usr@include@c++@11@bits@std_abs.h.blob  @usr@include@c++@11@cstdlib.blob  @usr@include@c++@11@stdlib.h.blob  @usr@include@ctype.h.blob  @usr@include@endian.h.blob  @usr@include@features-time64.h.blob  @usr@include@features.h.blob  @usr@include@limits.h.blob  @usr@include@linux@limits.h.blob  @usr@include@stdc-predef.h.blob  @usr@include@stdint.h.blob  @usr@include@stdio.h.blob  @usr@include@stdlib.h.blob  @usr@include@string.h.blob  @usr@include@strings.h.blob  @usr@include@time.h.blob  @usr@include@x86_64-linux-gnu@bits@atomic_wide_counter.h.blob  @usr@include@x86_64-linux-gnu@bits@byteswap.h.blob  @usr@include@x86_64-linux-gnu@bits@endian.h.blob  @usr@include@x86_64-linux-gnu@bits@endianness.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn-common.h.blob  @usr@include@x86_64-linux-gnu@bits@floatn.h.blob  @usr@include@x86_64-linux-gnu@bits@libc-header-start.h.blob  @usr@include@x86_64-linux-gnu@bits@local_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@long-double.h.blob  @usr@include@x86_64-linux-gnu@bits@posix1_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@posix2_lim.h.blob  @usr@include@x86_64-linux-gnu@bits@pthread_stack_min-dynamic.h.blob  @usr@include@x86_64-linux-gnu@bits@pthread_stack_min.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes-arch.h.blob  @usr@include@x86_64-linux-gnu@bits@pthreadtypes.h.blob  (+53 more)
c_progs/dice/exe/: Dice
c_progs/dice/inc/: dice.h  input_parser.h
c_progs/dice/src/: dice.c  input_parser.c  main.c
(+7 files in other folders)
